# ChannelStatus

./: pyproject.toml
src/: .env  check.py  main.py
src/bot/: bot.py
src/bot/cogs/: config.py
src/bot/cogs/helper/: helper.py
src/bot/config/: config.sqlite3  model.py  query.py
